test/csi-test-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: ephemeral-example
spec:
  containers:
  - image: nginx
    imagePullPolicy: IfNotPresent
    name: nginx-inline
    volumeMounts:
    - name: scratch-volume
      mountPath: /var/lib/www/html
  volumes:
  - name: scratch-volume
    ephemeral:
      volumeClaimTemplate:
        metadata:
          labels:
            type: my-frontend-volume
        spec:
          accessModes: [ "ReadWriteOnce" ]
          storageClassName: cinder-csi
          resources:
            requests:
              storage: 1Gi
