test/dns-ingress-pod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx2
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: myapp-test-dev3.devops.osc
    http:
      paths:
      - path: /
        backend:
          service:
            name: nginx2
            port:
              number: 80
        pathType: Prefix

---

apiVersion: v1
kind: Service
metadata:
  name: nginx2
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx2

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2
spec:
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - image: nginx
        name: nginx2
        ports:
        - containerPort: 80
